# Comp_Aplicada_ICA

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
ica/: __init__.py  dataset.py  features.py  plots.py
ica/modeling/: predict.py  train.py
notebooks/HW1/: EDA.ipynb
notebooks/HW2/: Feature_Selection.ipynb  Lasso.ipynb  regression.ipynb  regression_shafdan.ipynb
