[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ica"
version = "0.0.1"
description = "Reposit\u00f3rio com as implementa\u00e7\u00f5es dos c\u00f3digos do trabalho da Cadeira de Intelig\u00eancia Computacional Aplicada (ICA)"
authors = [
  { name = "Equipe de ICA" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["ica"]
force_sort_within_sections = true
